# wasp_search_and_rescue

./: .gitignore  README.md  connect_drone.sh
drone/: CMakeLists.txt  README.md  drone_rviz.rviz  package.xml
drone/action/: DoCommand.action  DoPositionCommand.action
drone/launch/: drone_sar.launch  launch_all_drones.launch  test_launch.launch
drone/msg/: object_loc.msg  object_pose.msg
drone/src/: DroneControl.cpp  DroneControl.h  DroneExecutePlan.cpp  DroneExecutePlan.h  DroneGlobalPosition.cpp  DroneGlobalPosition.h  HelperFunctions.h  control_drone_main.cpp  drone_execute_plan.cpp  global_position_main.cpp  search_rescue_test.cpp
drone/srv/: StringCommand.srv  StringService.srv
drone_kth2/: CMakeLists.txt  drone_rviz.rviz  drone_rviz.rviz~  package.xml
drone_kth2/action/: DoCommand.action
drone_kth2/launch/: launch_all_drones.launch~  test_launch.launch~  tum_package.launch  tum_package.launch~
drone_kth2/src/: DroneControl.cpp  DroneControl.cpp~  DroneControl.h  DroneControl.h~  DroneGlobalPosition.cpp  DroneGlobalPosition.cpp~  DroneGlobalPosition.h  DroneGlobalPosition.h~  apriltags_detection.cpp  landmark_location.h  sar_drone_main.cpp
planning/: run_planner.sh
planning/launch/: start_planning_system.launch
planning/scripts/: add_knowledge_linnea.py  pddl_functions.py
sar_position/: CMakeLists.txt  package.xml  package.xml~  setup.py~
sar_position/launch/: add_tags.launch~
tag_position/: CMakeLists.txt  package.xml  setup.py
tag_position/launch/: add_tags.launch
tag_position/nodes/: add_tag.py
tag_position/src/: MovingTag.cpp  MovingTag.h  Tag.cpp  Tag.h  moving_tag_main.cpp  tag_main.cpp
tag_position/srv/: EditPosition.srv
